--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,16 +30,18 @@ body.sticky-bottom-footer {
 .profile {
   img {
     width: 100%;
-    height: 25.5rem;
+    aspect-ratio: 4 / 5;
+    height: auto;
+    max-height: 29rem;
     object-fit: cover;
-    object-position: center top;
+    object-position: center 18%;
   }
 }
 
 @media (max-width: 575px) {
   .profile {
     img {
-      height: 21rem;
+      max-height: 24rem;
     }
   }
 }
